# k8sh

./: .gitignore  README.md  api_service.py  configuration.py  constants.py  custom_completer.py  data.txt  grammar.py  highlighter.py  init.py  install.sh  language_processor.py  lenguage_processor.py  main.py  nlp.py  prueba.py  pyproject.toml  requirements.txt  setup.py  todo.md
Bootstrap/: main.py
app/: .gitignore  README.md  main.py
bootstrap/: main.py
k8sh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
source/: conf.py  index.rst
